# mpir-generic

./: CMakeLists.txt  mpir.h  version.c
lib/: mpir.lib
